[package]
name = "oxidiscovery"
version = "0.1.3"
authors = ["Asaf Fisher <asaffisher@icloud.com>"]
edition = "2018"
description = "A powerfull, elegant simple peer to peer discovery."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
